test/Fail/Issue3338.err
Issue3338.agda:8.3-11.4: error: [MissingDefinitions]
The following names are declared but lack a definition:
RI foo
